--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <nav>
 <ul class="navigation text-center">
 <a href="index.html"><li>Home</li></a>
-<a href="about.html"><li>About Me</li></a>
+<a href="about.html"><li>About</li></a>
 <a href="skills.html"><li>Skills</li></a>
 <a href="gallery.html"><li>Gallery</li></a>
 <a href="contact.html"><li>Contact</li></a>
@@ -27,8 +27,7 @@
 </nav>
 </div>
 	
-	<iframe width="100%" height="420" src="https://www.youtube.com/embed/ut-U-4m42aQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	
+
 	
 	
 </header>
@@ -36,35 +35,20 @@
 
 
 
-<div class="col8">
-<h1 style="color:green; font-family:'Voltaire', sans-serif; margin-top: 20px; font-size: 47px;
-   text-align: center;">Who Am I</h1>
+<div class="col12">
+<h1 style="color:maroon; font-family:'Voltaire', sans-serif; margin-top: 20px; font-size: 47px;
+   text-align: center;">About me</h1>
 
-<p style="font-size: 22px; font-family: serif; padding-right: 20px; padding-left: 20px;">This is gautam karki and my hobbies is to travel new place and explore their culture and learn new things which give benefit in my entire life. I usually start my day with empty mind with heavy breakfast because I am really busy in the day I need to complete a lot of task. I can’t say I am talented but I am a good learner.
+<p style="font-size: 22px; font-family: serif; padding-right: 20%; padding-left: 20%;">This is gautam karki and my hobbies is to travel new place and explore their culture and learn new things which give benefit in my entire life. I usually start my day with empty mind with heavy breakfast because I am really busy in the day I need to complete a lot of task. I can’t say I am talented but I am a good learner.
 On Sunday I am free of tension I don’t have any classes as well as work in this days I used to walk alone in in the road street or in sea beach where I can re generated my energy for a week.
-I am available for parties and funerals and I offer 50% discount if you will buy both in package. </p>
+I am available for parties and funerals and I offer 50% discount if you will buy both in package.</p>
 </div>
-</div>
-<div class="col4" style="margin-top: 30px;">
-<img src="images/12.jpg" style="border-radius: 50%; padding:10px; width:88%;" /> 
-
-</div>
-<div class="break" style="clear:fixed;"></div>
-
-
-
-</section>
-
-
-
-
-<p></p>
-
 <h1 style="text-align: center; background-color: white; color: white;">© All right Reversed.Gautam Karki</h1>
 <div id="footer">
 
 © 2019 Gautam Karki. All Right Reserved
 </div>
+
 
 </body>
 </html>
