--- a/about.html
+++ b/about.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>Gautam Karki Personal Web Page</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Changa|Voltaire&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/fontawesome.css">
-	<link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
+	<link rel="stylesheet" type="text/css" href="fontawesome.css">
+	<link rel="stylesheet" type="text/css" href="fontawesome.min.css">
 
 </head>
 <body>
