--- a/gallery.html
+++ b/gallery.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Gautam Karki Personal Web Page</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-	
+	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Changa|Voltaire&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/fontawesome.css">
-	<link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
+	<link rel="stylesheet" type="text/css" href="fontawesome.css">
+	<link rel="stylesheet" type="text/css" href="fontawesome.min.css">
+
 
 <style type="text/css">
 	img{margin-right: 10px; margin-left: 10px; border-radius: 5px;
@@ -52,39 +53,39 @@ img:hover{
    <div class="gallery">
    	<div class="col12">
    		<div class="col3" style="margin-bottom: 15px;">
-   			<img src="images/1.jpg" >
+   			<img src="1.jpg" >
    		</div>
 
    		<div class="col3" style="margin-bottom: 15px;">
-   			<img src="images/2.jpg" style="height:400px;" >
+   			<img src="2.jpg" style="height:400px;" >
    		</div>
 
    		<div class="col3" style="margin-bottom: 15px;">
-   			<img src="images/3.jpg" >
+   			<img src="3.jpg" >
    		</div>
 
    		<div class="col3" style="margin-bottom: 15px;">
-   			<img src="images/4.jpg" >
+   			<img src="4.jpg" >
    		</div>
 
    		<div class="col3" style="margin-bottom: 15px;">
-   			<img src="images/5.jpg" >
+   			<img src="5.jpg" >
    		</div>
 
    		<div class="col3" style="margin-bottom: 15px;">
-   			<img src="images/6.jpg" >
+   			<img src="6.jpg" >
    		</div>
 
    		<div class="col3" style="margin-bottom: 15px;">
-   			<img src="images/7.jpg" >
+   			<img src="7.jpg" >
    		</div>
 
    		<div class="col3" style="margin-bottom: 15px;">
-   			<img src="images/8.jpg" >
+   			<img src="8.jpg" >
    		</div>
 
          <div class="col3" style="margin-bottom: 15px;">
-            <img src="images/9.jpg" >
+            <img src="9.jpg" >
          </div>
    	</div>
    </div>
