--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ I am available for parties and funerals and I offer 50% discount if you will buy
 </div>
 </div>
 <div class="col4" style="margin-top: 30px;">
-<img src="images/12.jpg" style="border-radius: 50%; padding:10px; width:88%;" /> 
+<img src="12.jpg" style="border-radius: 50%; padding:10px; width:88%;" /> 
 
 </div>
 <div class="break" style="clear:fixed;"></div>
